Update AttendanceController.java
fix code smells